fix blockquote css invisible problem

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -205,11 +205,3 @@ pre[data-line] {
   float: left;
   min-width: 100%;
 }
-
-h1 {
-  margin-top: 1.5rem;
-}
-
-article:hover {
-  opacity: 0.7;
-}
